--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@
   font-size : 25px;
   font-weight:700;
   font-family: 'Fractul', sans-serif !important;
-  margin:0;
+  margin:13px 0;
   color:black;
 }
 /* The Close Button */
